<resources>
    <string name="app_name">clone_library</string>

    <string name="main_title">USW 중앙도서관</string>
    <string name="serach_hint">검색어를 입력하세요.</string>

    <string name="main_icon_1">대출/연장/\n예약조회</string>
    <string name="main_icon_2">학술DB</string>
    <string name="main_icon_3">동영상\n강의</string>
    <string name="main_icon_4">전자책</string>
    <string name="main_icon_5">스터디룸\n예약</string>
    <string name="main_icon_6">희망도서\n신청</string>
    <string name="main_icon_7">추천도서\n(개인맞춤)</string>
    <string name="main_icon_8">FAQ</string>
    <string name="main_icon_9">연체료</string>

    <string name="main_notice_title">공지사항</string>
    <string name="main_notice_more">더보기</string>

    <string name="main_underbar_info">이용안내</string>
    <string name="main_underbar_notice">개인공지</string>
    <string name="main_underbar_idcard">모바일이용증</string>

    <string name="main_navigationview_text1">대출현황</string>
    <string name="main_navigationview_text2">예약현황</string>
    <string name="main_navigationview_text3">선예약현황</string>
    <string name="main_navigationview_text4">연체현황</string>
    <string name="main_navigationview_text5">연체료</string>
    <string name="main_navigationview_text6">개인공지사항</string>
    <string name="main_navigationview_text7">부재도서신고현황</string>
    <string name="main_navigationview_text8">제재현황</string>
    <string name="main_navigationview_text9">희망도서신청</string>
    <string name="main_navigationview_text10">로그아웃</string>
    <string name="main_navigationview_toast">로그아웃되었습니다.</string>


    <string name="login_title">LOGIN</string>
    <string name="login_id">아이디</string>
    <string name="login_warningid">아이디를 입력해 주세요.</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_warningpw">비밀번호를 입력해 주세요.</string>
    <string name="login_login">로그인</string>
    <string name="login_autologin">자동로그인</string>
    <string name="login_text1">알림은 로그인 후 설정하실 수 있습니다.</string>
    <string name="login_here">여기</string>
    <string name="login_number">031-220-2393</string>
</resources>