<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/login_titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/uswblue"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/login_btn_home"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="15dp"

                android:layout_weight="2"
                app:srcCompat="@drawable/icon_app_home" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/login_titleview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/login_loginlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/background_login_rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_id"
                        android:textColor="@color/uswbackgroundgray"
                        android:textSize="14dp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/login_edittext_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:inputType="textPersonName"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/login_textview_warningid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/login_warningid"
                        android:textColor="@color/red"
                        android:textSize="1dp"
                        android:visibility="invisible" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:srcCompat="@drawable/background_login_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_pw"
                        android:textColor="@color/uswbackgroundgray"
                        android:textSize="14dp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/login_edittext_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:inputType="textPassword"
                        android:background="@null"
                        android:ems="10"
                        android:textSize="16dp"/>

                    <TextView
                        android:id="@+id/login_textview_warningpw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/login_warningpw"
                        android:textColor="@color/red"
                        android:textSize="1dp"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_login"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:background="@drawable/background_login_btn_login"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_login_rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <Switch
                        android:id="@+id/login_switch_autologin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_autologin"
                        android:textColor="@color/uswbackgroundgray"
                        android:textSize="16dp"
                        android:checked="true"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:srcCompat="@drawable/background_login_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_text1"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/login_btn_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textColor="@color/red"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
            </TextView>

            <TextView
                android:id="@+id/login_btn_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_number"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
            </TextView>


        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>